Fixed scrolling problem on subjects page on iPad. Also added smooth scrolling to all scrolling elements (except list of tasks on calendar. Usability & z-index  issues)

--- a/www/css/accordion.css
+++ b/www/css/accordion.css
@@ -4,7 +4,9 @@ a {
 }
 
 .accordion {
-    overflow:auto;
+    /*overflow:auto;*/
+    /*overflow-y: scroll;*/
+    overflow-x: hidden;
     width: 80%;
     margin: auto;
     height: 100%;
